# tania-signal-copier

./: .env.example  .gitignore  Dockerfile  README.md  bot_state.json  com.tania-signal-copier.bot.plist  pyproject.toml  run_bot.sh  start-linux.sh
api/: .env.example  CLAUDE.md  README.md  pyproject.toml
api/src/: __init__.py  config.py  dependencies.py  main.py  runtime_data.py  symbol_utils.py
api/src/routers/: __init__.py  account.py  analysis.py  bot.py  config.py  health.py  orders.py  positions.py  prompts.py  symbols.py  telegram.py
api/src/schemas/: account.py  order.py  position.py  websocket.py
api/src/services/: history_service.py
api/src/websocket/: broadcaster.py  log_manager.py  manager.py
bot/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  check_mt5.py  gui_app.py  pyproject.toml  run_bot.bat  run_bot.ps1  run_bot.sh  run_gui.bat  run_gui.ps1  run_gui.sh
bot-playground/: CLAUDE.md
bot/scripts/: analyze_signals.py  fetch_signals.py  report_signal_outcomes.py  test_profit_messages.py  test_telegram.py
bot/src/tania_signal_copier/: __init__.py  bot.py  config.py  executor.py  models.py  mt5_adapter.py  parser.py  state.py  strategy.py
bot/src/tania_signal_copier/llm/: __init__.py  base.py  cerebras_provider.py  factory.py  groq_provider.py
bot/tests/: conftest.py  test_bot.py  test_executor_partial_close.py  test_swing_trade_fixes.py
bot/tests/integration/: conftest.py  test_executor_integration.py  test_mt5_integration.py  test_progressive_sl.py
dashboard/: CLAUDE.md  README.md  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
dashboard/src/app/analysis/: page.tsx
dashboard/src/app/bot/: page.tsx
dashboard/src/app/config/: page.tsx
dashboard/src/hooks/: use-websocket.ts
dashboard/src/lib/: api.ts  constants.ts  motion.ts  utils.ts
dashboard/src/types/: index.ts
scripts/: setup_telegram_session.py  test_signal_parser.py  test_telegram.py
src/tania_signal_copier/: __init__.py  bot.py  executor.py  models.py  mt5_adapter.py  parser.py  state.py
tests/integration/: __init__.py  conftest.py  test_e2e_flow.py  test_executor_integration.py  test_reconnection.py
(+26 files in other folders)
